--- a/Classify/requirements.txt
+++ b/Classify/requirements.txt
@@ -1,11 +1,17 @@
 click==6.7
+configparser==3.5.0
+enum34==1.1.6
+flake8==3.5.0
 Flask==1.0.2
 fuzzywuzzy==0.16.0
 itsdangerous==0.24
 Jinja2==2.10
 MarkupSafe==1.0
+mccabe==0.6.1
 numpy==1.14.3
 pandas==0.23.0
+pycodestyle==2.3.1
+pyflakes==1.6.0
 python-dateutil==2.7.3
 python-Levenshtein==0.12.0
 pytz==2018.4
